[package]
name = "sign_server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.25", features = ["macros", "rt-multi-thread", "net"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }

axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "http2"] }
tower-http = { version = "0.5", features = ["cors"] }

hex = "0.4"
bcs = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["std_rng"] }

serde_bytes = "0.11"
serde_repr = "0.1"

aws-nitro-enclaves-nsm-api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", optional = true }

[features]
default = []
aws = ["aws-nitro-enclaves-nsm-api"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
