[package]
name = "sign_server"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.25", features = ["macros", "rt-multi-thread", "net"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

nautilus-enclave = { git = "https://github.com/Ashwin-3cS/nautilus-cli.git" }

axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "http2"] }
tower-http = { version = "0.5", features = ["cors"] }

hex = "0.4"
bcs = "0.1"
chrono = { version = "0.4", features = ["serde"] }

serde_repr = "0.1"

[features]
default = []
aws = ["nautilus-enclave/nsm"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
